err/tilestache.err
Listing '.'...
Listing './bin'...
Compiling './bin/tilestache-clean.py'...
***   File "./bin/tilestache-clean.py", line 170
    except KnownUnknown, e:
                       ^
SyntaxError: invalid syntax

Compiling './bin/tilestache-compose.py'...
***   File "./bin/tilestache-compose.py", line 80
    print ' '.join([str(thing) for thing in stuff])
            ^
SyntaxError: invalid syntax

Compiling './bin/tilestache-list.py'...
***   File "./bin/tilestache-list.py", line 128
    print '%(zoom)d/%(column)d/%(row)d' % coord.__dict__
                                      ^
SyntaxError: invalid syntax

Compiling './bin/tilestache-render.py'...
***   File "./bin/tilestache-render.py", line 79
    except KnownUnknown, e:
                       ^
SyntaxError: invalid syntax

Compiling './bin/tilestache-seed.py'...
***   File "./bin/tilestache-seed.py", line 312
    except KnownUnknown, e:
                       ^
SyntaxError: invalid syntax

Compiling './bin/tilestache-server.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ModestMaps'...
Listing './lib/python3.5/site-packages/ModestMaps-1.4.7.egg-info'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/TileStache'...
Listing './lib/python3.5/site-packages/TileStache/Goodies'...
Compiling './lib/python3.5/site-packages/TileStache/Goodies/AreaServer.py'...
***   File "./lib/python3.5/site-packages/TileStache/Goodies/AreaServer.py", line 88
    except KnownUnknown, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/TileStache/Goodies/Caches'...
Compiling './lib/python3.5/site-packages/TileStache/Goodies/Caches/LimitedDisk.py'...
***   File "./lib/python3.5/site-packages/TileStache/Goodies/Caches/LimitedDisk.py", line 49
    def __init__(self, path, limit, umask=0022):
                                             ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/TileStache/Goodies/Providers'...
Compiling './lib/python3.5/site-packages/TileStache/Goodies/Providers/MirrorOSM.py'...
***   File "./lib/python3.5/site-packages/TileStache/Goodies/Providers/MirrorOSM.py", line 168
    except ProgrammingError, e:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/TileStache/Goodies/StatusServer.py'...
***   File "./lib/python3.5/site-packages/TileStache/Goodies/StatusServer.py", line 219
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/TileStache/Goodies/VecTiles'...
Listing './lib/python3.5/site-packages/TileStache/Vector'...
Listing './lib/python3.5/site-packages/TileStache-1.51.6.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.11.13.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
Listing './share/tilestache'...
